Pocetak rada na kreiranju rezervacija - ne radi pamcenje rezervacija u bazu

--- a/CS324-PZ/mysite/AppartmentRent/templates/AppartmentRent/detail.html
+++ b/CS324-PZ/mysite/AppartmentRent/templates/AppartmentRent/detail.html
@@ -17,4 +17,6 @@
 <a href="{% url 'AppartmentRent:reservation' appartment.id %}">
 	<input type="submit" value="REZERVIŠI" class="reserveBtn" />
 </a>
-
+<br>
+<a href="{% url 'AppartmentRent:index' %}" class="backBtn">Nazad</a>
+<br><br><br>
