--- a/CS324-PZ/mysite/AppartmentRent/static/AppartmentRent/style.css
+++ b/CS324-PZ/mysite/AppartmentRent/static/AppartmentRent/style.css
@@ -51,7 +51,7 @@ a {
 	font-weight: bold;
 }
 .reserveBtn {
-	width: 20%;
+	width: 30%;
 	margin-left: 3%;
 	height: 30px;
 	color: white;
@@ -59,4 +59,30 @@ a {
 	border-radius: 5px;
 	border: none;
 	margin-bottom: 30px;
+}
+.submitReservationBtn {
+	width: 30%;
+	margin-left: 3%;
+	height: 30px;
+	color: white;
+	background-color: #0a0f44;
+	border-radius: 5px;
+	border: none;
+	margin-bottom: 30px;
+	margin-top: 30px;
+}
+.userInput {
+	width: 30%;
+	height: 30px;
+	border: none;
+	border-radius: 5px;
+	margin-left: 3%;
+	color: #0a0f44;
+	padding-left: 10px;
+}
+.backBtn {
+	color: #0a0f44;
+	text-decoration: none;
+	font-size: 1.2em;
+	margin-left: 3%;
 }
