--- a/CS324-PZ/mysite/AppartmentRent/static/AppartmentRent/style.css
+++ b/CS324-PZ/mysite/AppartmentRent/static/AppartmentRent/style.css
@@ -2,13 +2,30 @@ body {
     background-color: #d3dbe8;
 }
 .titleImg {
-	width: 100%;
-	height: 450px;
+	width: 96%;
+	height: 400px;
 	background: url("images/background1.jpg") no-repeat;
-	background-size: contain;
+	background-size: cover;
+	margin-left: 2%;
+}
+.menu {
+	margin-top: 15px;
+	margin-left: 2%;
+	width: 96%;
+	height: 40px;
+	background-color: #e1e7f2;
+}
+.menuItem {
+	text-align: center;
+	padding-top: 6px;
+	height: 40px;
+	width: 15%;
+	color: #0a0f44;
+	float: left;
+	border-right: 1px solid #d3dbe8;
 }
 .title {
-	margin-left: 3%;
+	margin-left: 2%;
 	color: #0a0f44;
 }
 .appartment {
@@ -17,7 +34,8 @@ body {
 	height: auto;
 	border-radius: 5px;
 	float: left;
-	margin-right: 10%;
+	margin-right: 7%;
+	margin-left: 3%;
 	margin-bottom: 40px;
 	-webkit-box-shadow: 0px 0px 40px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 40px 0px rgba(0,0,0,0.75);
@@ -85,4 +103,47 @@ a {
 	text-decoration: none;
 	font-size: 1.2em;
 	margin-left: 3%;
+}
+.destination {
+	background-color: white;
+	width: 40%;
+	height: auto;
+	border-radius: 5px;
+	float: left;
+	margin-right: 7%;
+	margin-left: 3%;
+	margin-bottom: 40px;
+	-webkit-box-shadow: 0px 0px 40px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 40px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 40px 0px rgba(0,0,0,0.75);
+	padding-top: 10px;
+}
+.destinationTitle {
+	font-size: 1.8em;
+	color: #0a0f44;
+	margin-left: 10px;
+	margin-top: 20px;
+	font-weight: bold;
+}
+.destinationDesc {
+	font-size: 1.2em;
+	color: #0a0f44;
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-top: 20px;
+}
+.destinationInfo {
+	font-size: 1.3em;
+	color: #0a0f44;
+	margin-left: 10px;
+	margin-top: 20px;
+}
+.destinationImgDiv {
+	width: 96%;
+	margin-left: 2%;
+	height: 240px;
+}
+.destinationImg {
+	width: 100%;
+	height: 100%;
 }
