Odradjena strana za kontakt kao i pamcenje kontakata u bazi

--- a/CS324-PZ/mysite/AppartmentRent/static/AppartmentRent/style.css
+++ b/CS324-PZ/mysite/AppartmentRent/static/AppartmentRent/style.css
@@ -60,17 +60,18 @@ a {
 .appartInfo {
 	font-size: 1.2em;
 	color: #0a0f44;
-	margin-left: 3%;
+	margin-left: 2%;
 }
 .appartInfoLabel {
 	font-size: 1.2em;
 	color: #0a0f44;
-	margin-left: 3%;
 	font-weight: bold;
+	margin-bottom: 0px;
+	margin-left: 2%;
 }
 .reserveBtn {
 	width: 30%;
-	margin-left: 3%;
+	margin-left: 2%;
 	height: 30px;
 	color: white;
 	background-color: #0a0f44;
@@ -80,7 +81,7 @@ a {
 }
 .submitReservationBtn {
 	width: 30%;
-	margin-left: 3%;
+	margin-left: 2%;
 	height: 30px;
 	color: white;
 	background-color: #0a0f44;
@@ -94,7 +95,16 @@ a {
 	height: 30px;
 	border: none;
 	border-radius: 5px;
-	margin-left: 3%;
+	margin-left: 2%;
+	color: #0a0f44;
+	padding-left: 10px;
+}
+.userArea {
+	width: 30%;
+	height: 80px;
+	border: none;
+	border-radius: 5px;
+	margin-left: 2%;
 	color: #0a0f44;
 	padding-left: 10px;
 }
@@ -146,4 +156,19 @@ a {
 .destinationImg {
 	width: 100%;
 	height: 100%;
+}
+.info {
+	margin-bottom: 40px;
+}
+.contactInfoName {
+	color: #0a0f44;
+	margin-bottom: 0px;
+	margin-left: 2%;
+}
+.contactInfo {
+	color: #0a0f44;
+	font-size: 1.2em;
+	padding: 0px;
+	margin: 0px;
+	margin-left: 2%;
 }
