--- a/CS324-PZ/mysite/AppartmentRent/templates/AppartmentRent/errorReservation.html
+++ b/CS324-PZ/mysite/AppartmentRent/templates/AppartmentRent/errorReservation.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'AppartmentRent/style.css' %}" />
+<title>MJ travel</title>
 
 <div class="titleImg"></div>
 
@@ -11,7 +12,10 @@
     <div class="menuItem">
         <a href="{% url 'AppartmentRent:destinations' %}" class="appartName">Destinacije</a>
     </div>    
+    <div class="menuItem">
+        <a href="{% url 'AppartmentRent:contact' %}" class="appartName">Kontakt</a>
+    </div>    
 </div>
 
-<h1 class="title">Rezervacija trenutno nije moguća.</h1>
+<h1 class="title">Rezervacija trenutno nije moguća, sva mesta u odabranom smeštaju su zauzeta.</h1>
 
