--- a/CS324-PZ/mysite/AppartmentRent/templates/AppartmentRent/reserve.html
+++ b/CS324-PZ/mysite/AppartmentRent/templates/AppartmentRent/reserve.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'AppartmentRent/style.css' %}" />
+<title>MJ travel</title>
 
 <div class="titleImg"></div>
 
@@ -11,6 +12,9 @@
     <div class="menuItem">
         <a href="{% url 'AppartmentRent:destinations' %}" class="appartName">Destinacije</a>
     </div>   
+    <div class="menuItem">
+        <a href="{% url 'AppartmentRent:contact' %}" class="appartName">Kontakt</a>
+    </div>    
     <div class="menuItem">
     	<a href="{% url 'AppartmentRent:detail' appartment.id %}" class="backBtn">Nazad</a>
     </div> 
