--- a/CS324-PZ/mysite/AppartmentRent/templates/AppartmentRent/detail.html
+++ b/CS324-PZ/mysite/AppartmentRent/templates/AppartmentRent/detail.html
@@ -20,13 +20,18 @@
 <h1 class="title">{{ appartment.name }}</h1>
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-<p class="appartInfoLabel">Opis:</p>
-<p class="appartInfo">{{ appartment.description }}</p>
-<p class="appartInfoLabel">Mesto:</p>
-<p class="appartInfo">{{ appartment.location.place }}, {{ appartment.location.country }}</p>
-<p class="appartInfoLabel">Cena:</p>
-<p class="appartInfo"> € {{ appartment.price }} po danu/ noći</p>
+<div class="appartmentInfoDiv">
+    <p class="appartInfoLabel">Opis:</p>
+    <p class="appartInfo">{{ appartment.description }}</p>
+    <p class="appartInfoLabel">Mesto:</p>
+    <p class="appartInfo">{{ appartment.location.place }}, {{ appartment.location.country }}</p>
+    <p class="appartInfoLabel">Cena:</p>
+    <p class="appartInfo"> € {{ appartment.price }} po danu/ noći</p>
 
-<a href="{% url 'AppartmentRent:reservation' appartment.id %}">
-	<input type="submit" value="REZERVIŠI" class="reserveBtn" />
-</a>
+    <a href="{% url 'AppartmentRent:reservation' appartment.id %}">
+    	<input type="submit" value="REZERVIŠI" class="reserveAppartmentBtn" />
+    </a>
+</div>
+<div class="appartmentImgDiv">
+    <img src="{{ appartment.photo }}" alt="Slika apartmana" class="appartmentImg">
+</div>
